--- a/package.json
+++ b/package.json
@@ -9,18 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@gsap/react": "^2.1.1",
+    "clsx": "^2.1.1",
+    "framer": "^2.4.1",
+    "lenis": "^1.1.13",
+    "lucide-react": "^0.441.0",
+    "motion": "^10.18.0",
+    "next": "14.2.8",
     "react": "^18",
+    "react-countplus": "^2.0.4",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-rough-notation": "^1.0.5",
+    "react-typed": "^2.0.12",
+    "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.8"
+    "typescript": "^5"
   }
 }
